# toy_heatmap

./: 256_scalar_field.npy  Cargo.toml
src/: heatmap.rs  lib.rs  main.rs  shader_color.wgsl
